@@ -21,10 +21,11 @@ view=View
 lookup=Lookup
 
 [ui.node]
-display=view,add,lookup
+display=view,categories,lookup,add
 add=Add
 view=View
 lookup=Lookup
+categories=Categories
 
 [ui.violation]
 display=view,add
@@ -153,6 +154,13 @@ switch=Switch
 port=Port
 vlan=VLAN
 command=node add
+
+[ui.node.categories]
+display=name,description,sql
+name=Name
+description=Description
+sql=SQL
+command=nodecategory view
 
 [ui.node.view]
 display=mac,pid,detect_date,regdate,unregdate,lastskip,status,user_agent,computername,notes,last_arp,last_dhcp,switch,port,vlan,dhcp_fingerprint,nbopenviolations
