@@ -116,6 +116,7 @@
           (http://www.packetfence.org/mantis/view.php?id=500)
         show open violations in Node - View
           (http://www.packetfence.org/mantis/view.php?id=501)
+        added node categories
 
 1.7.5
         pfsetvlan should check that MAC field is filled before
